Правки в соответствии с замечаниями