@@ -2,12 +2,13 @@ package ru.job4j.io;
 
 import java.io.*;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
 
 public class CSVReader {
     public static void handle(ArgsName argsName) throws Exception {
-        OutputStream outputStream = argsName.get("out").equals("stdout")
+        OutputStream outputStream = "stdout".equals(argsName.get("out"))
                 ? System.out : new FileOutputStream(argsName.get("out"));
         try (BufferedReader read = new BufferedReader(new FileReader(argsName.get("path")));
              PrintWriter out = new PrintWriter(outputStream)) {
@@ -16,6 +17,9 @@ public class CSVReader {
             String[] columnName = line.split(delimiter);
             String[] filterName = argsName.get("filter").split(",");
             int[] indexes = rightIndex(columnName, filterName);
+            for (int i = 0, j = 0; i < indexes.length; i++) {
+                filterName[j++] = columnName[indexes[i]];
+            }
             out.print(String.join(delimiter, filterName));
             out.println();
             while ((line = read.readLine()) != null) {
@@ -62,30 +66,27 @@ public class CSVReader {
         return rsl;
     }
 
-    private static void inputValidating(String[] args) {
-        if (args.length != 4) {
-            throw new IllegalArgumentException("Wrong amount of arguments.");
+    private static void inputValidating(ArgsName argsName) {
+        if (argsName.get("path") == null) {
+            throw new IllegalArgumentException("There is no the path argument.");
         }
-        if (!args[0].startsWith("path")) {
-            throw new IllegalArgumentException("The first argument should be the path.");
+        if (argsName.get("delimiter") == null) {
+            throw new IllegalArgumentException("There is no the delimiter argument.");
         }
-        if (!args[1].startsWith("delimiter")) {
-            throw new IllegalArgumentException("The second argument should be the delimiter.");
+        if (argsName.get("out") == null) {
+            throw new IllegalArgumentException("There is no the out argument.");
         }
-        if (!args[2].startsWith("out")) {
-            throw new IllegalArgumentException("The third argument should be the out.");
+        if (argsName.get("filter") == null) {
+            throw new IllegalArgumentException("There is no the filter argument.");
         }
-        if (!args[3].startsWith("filter")) {
-            throw new IllegalArgumentException("The fourth argument should be the filter.");
-        }
-        if (!Files.exists(Paths.get(args[0]))
-                || Files.isDirectory(Paths.get(args[0]))) {
-            throw new IllegalArgumentException("File does not exist or path does not point to a file.");
+        if (!Files.exists(Path.of(argsName.get("path")))) {
+            throw new IllegalArgumentException("File does not exist.");
         }
     }
 
     public static void main(String[] args) throws Exception {
-        inputValidating(args);
-        handle(ArgsName.of(args));
+        ArgsName argsName = ArgsName.of(args);
+        inputValidating(argsName);
+        handle(argsName);
     }
 }
